--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-cloudscraper==1.2.58
-garminconnect==0.1.24
-geopy==2.2.0
-gpxpy==1.4.2
+pydantic==1.10.13
+garth==0.4.34
+garminconnect==0.2.8
+requests==2.31.0
+cloudscraper==1.2.71
+gpxpy==1.6.2
+geopy==2.4.1
 lxml==4.6.3
-pytest==7.3.1
-requests==2.24.0
+python-tcxparser==2.3.0
+tcxreader==0.4.10
+dateutils==0.6.12
+pandas~=2.2.2
