--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ ruff = "^0.9.10"
 pytest = "^8.4.1"
 types-pyyaml = "^6.0.12.20250809"
 types-requests = "^2.32.4.20250809"
+pandas-stubs = "2.3.0.250703"
+types-pytz = "2025.2.0.20250809"
+
 
 [bild-system]
 requires = ["poetry-core"]
